docs(Label): change description in clickable use case

--- a/src/components/Label/__stories__/label.stories.mdx
+++ b/src/components/Label/__stories__/label.stories.mdx
@@ -141,7 +141,7 @@ In case of visual overload, use the secondary label in order to create hirarchy.
 </Canvas>
 
 ### Clickable
-Default prop is set to false. In case you want to activate, change boolean to true.
+Labels with an onClick prop change appearance on hover, focus, and click.
 <Canvas>
   <Story name="Clickable">
     <div className="monday-storybook-label_block">
