docs(Label): change description in clickable use case

--- a/src/components/Label/__stories__/label.stories.mdx
+++ b/src/components/Label/__stories__/label.stories.mdx
@@ -141,7 +141,7 @@ In case of visual overload, use the secondary label in order to create hirarchy.
 </Canvas>
 
 ### Clickable
-Labels with an onClick prop change appearance on hover, focus, and click.
+By applying the onClick prop, the label will become clickable and get all the relevant states (hover, focus, ...) and keyboard support
 <Canvas>
   <Story name="Clickable">
     <div className="monday-storybook-label_block">
