--- a/src/components/Table/Table/__stories__/table.stories.mdx
+++ b/src/components/Table/Table/__stories__/table.stories.mdx
@@ -18,15 +18,20 @@ import {
   TableErrorState,
   TableEmptyState,
   sort,
+  virtualizedScrollTableColumns,
+  virtualizedScrollTableData,
+  doAndDontIconsRuleColumns,
+  priorityColumnToLabelColor,
+  statusColumnToLabelColor,
+  scrollTableData,
   scrollTableColumns,
-  scrollTableData
+  doAndDontIconsRuleData
 } from "./helpers";
 import {
   LABEL,
   ICON_BUTTON,
   SKELETON
 } from "../../../../storybook/components/related-components/component-description-map";
-import "./table.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: Table
@@ -35,7 +40,7 @@ export const metaSettings = createStoryMetaSettingsDecorator({
 <Meta
   title="Data display/Table"
   component={metaSettings.component}
-  subcomponents={{ TableHeader, TableHeaderCell, TableRow, TableCell, TableBody, TableVirtualizedBody }}
+  subcomponents={{ TableHeader, TableHeaderCell, TableBody, TableRow, TableCell, TableVirtualizedBody }}
   argTypes={metaSettings.argTypes}
   decorators={metaSettings.decorators}
 />
@@ -53,6 +58,7 @@ export const tableTemplate = createComponentTemplate(Table);
 - [Table header functionality](#table-header-functionality)
 - [Loading](#loading)
 - [Scroll](#scroll)
+- [Virtualized Scroll](#virtualized-scroll)
 - [Related components](#related-components)
 
 ## Overview
@@ -61,14 +67,108 @@ Table
 
 <Canvas>
   <Story name="Overview">
-    <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={emailColumns}>
+    <Table
+      errorState={<TableErrorState />}
+      emptyState={<TableEmptyState />}
+      columns={[
+        {
+          id: "sentOn",
+          title: "Sent on",
+          width: 150,
+          loadingStateType: "medium-text"
+        },
+        {
+          id: "subject",
+          title: "Subject",
+          loadingStateType: "long-text"
+        },
+        {
+          id: "sentBy",
+          title: "Sent by",
+          width: { min: 120, max: 200 },
+          infoContent: "This is the sender",
+          loadingStateType: "circle"
+        },
+        {
+          id: "status",
+          title: "Status",
+          width: 150,
+          infoContent: "Info content for the status column",
+          loadingStateType: "medium-text"
+        },
+        {
+          id: "emailsSent",
+          title: "Emails sent",
+          width: 150,
+          loadingStateType: "medium-text"
+        }
+      ]}
+    >
       <TableHeader>
-        {emailColumns.map((headerCell, index) => (
+        {[
+          {
+            id: "sentOn",
+            title: "Sent on",
+            width: 150,
+            loadingStateType: "medium-text"
+          },
+          {
+            id: "subject",
+            title: "Subject",
+            loadingStateType: "long-text"
+          },
+          {
+            id: "sentBy",
+            title: "Sent by",
+            width: { min: 120, max: 200 },
+            infoContent: "This is the sender",
+            loadingStateType: "circle"
+          },
+          {
+            id: "status",
+            title: "Status",
+            width: 150,
+            infoContent: "Info content for the status column",
+            loadingStateType: "medium-text"
+          },
+          {
+            id: "emailsSent",
+            title: "Emails sent",
+            width: 150,
+            loadingStateType: "medium-text"
+          }
+        ].map((headerCell, index) => (
           <TableHeaderCell key={index} title={headerCell.title} />
         ))}
       </TableHeader>
       <TableBody>
-        {emailTableData.map(rowItem => (
+        {[
+          {
+            id: "1",
+            sentOn: "2020-01-01",
+            sentBy: "John Doe",
+            subject: "Lorem ipsum dolor",
+            status: "Sent",
+            emailsSent: 100
+          },
+          {
+            id: "3",
+            sentOn: "2023-03-03",
+            sentBy: "Some Person",
+            subject:
+              "This is the subject This is the subject This is the subject This is the subject This is the subject This is the subject",
+            status: "Sent",
+            emailsSent: 999
+          },
+          {
+            id: "2",
+            sentOn: "2022-02-02",
+            sentBy: "Other Name",
+            subject: "This is the subject",
+            status: "Sent",
+            emailsSent: 99
+          }
+        ].map(rowItem => (
           <TableRow key={rowItem.id}>
             <TableCell>{rowItem.sentOn}</TableCell>
             <TableCell>{rowItem.subject}</TableCell>
@@ -145,30 +245,29 @@ Using skeleton
 
 <Canvas>
   <Story name="Loading">
-    <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={emailColumns}>
+    <Table
+      dataState={{ isLoading: true }}
+      errorState={<TableErrorState />}
+      emptyState={<TableEmptyState />}
+      columns={emailColumns}
+    >
       <TableHeader>
         {emailColumns.map((headerCell, index) => (
           <TableHeaderCell key={index} title={headerCell.title} />
         ))}
       </TableHeader>
       <TableBody>
-        {[...new Array(5)].map((key, index) => (
-          <TableRow key={index}>
+        {emailTableData.map(rowItem => (
+          <TableRow key={rowItem.id}>
+            <TableCell>{rowItem.sentOn}</TableCell>
+            <TableCell>{rowItem.subject}</TableCell>
             <TableCell>
-              <Skeleton type={Skeleton.types.TEXT} height={20} width={index % 2 === 0 ? 140 : 70} />
+              <TableAvatar text={rowItem.sentBy} />
             </TableCell>
             <TableCell>
-              <Skeleton type={Skeleton.types.TEXT} height={20} width={index % 2 === 0 ? 200 : 120} />
+              <Label text={rowItem.status} color="positive" isAnimationDisabled />
             </TableCell>
-            <TableCell>
-              <Skeleton type={Skeleton.types.CIRCLE} height={24} width={24} />
-            </TableCell>
-            <TableCell>
-              <Skeleton type={Skeleton.types.TEXT} height={20} />
-            </TableCell>
-            <TableCell>
-              <Skeleton type={Skeleton.types.TEXT} height={20} />
-            </TableCell>
+            <TableCell>{rowItem.emailsSent}</TableCell>
           </TableRow>
         ))}
       </TableBody>
@@ -178,10 +277,50 @@ Using skeleton
 
 ## Scroll
 
-This is an example of a table with 5000 rows
+Table with both vertical and horizontal scroll
 
 <Canvas>
   <Story name="Scroll">
+    <div style={{ height: 220, width: 800 }}>
+      <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={scrollTableColumns}>
+        <TableHeader>
+          {scrollTableColumns.map((headerCell, index) => (
+            <TableHeaderCell key={index} title={headerCell.title} />
+          ))}
+        </TableHeader>
+        <TableBody>
+          {scrollTableData.map(rowItem => (
+            <TableRow key={rowItem.id}>
+              <TableCell>{rowItem.sentOn}</TableCell>
+              <TableCell>
+                <Label
+                  text={rowItem.priority}
+                  color={priorityColumnToLabelColor[rowItem.priority]}
+                  isAnimationDisabled
+                />
+              </TableCell>
+              <TableCell>{rowItem.subject}</TableCell>
+              <TableCell>
+                <TableAvatar text={rowItem.sentBy} />
+              </TableCell>
+              <TableCell>
+                <Label text={rowItem.status} color={statusColumnToLabelColor[rowItem.status]} isAnimationDisabled />
+              </TableCell>
+              <TableCell>{rowItem.emailsSent}</TableCell>
+            </TableRow>
+          ))}
+        </TableBody>
+      </Table>
+    </div>
+  </Story>
+</Canvas>
+
+## Virtualized Scroll
+
+This is an example of a table with 5000 rows
+
+<Canvas>
+  <Story name="Virtualized Scroll">
     {() => {
       const Row = ({ _id, num, text }) => {
         return (
@@ -192,25 +331,98 @@ This is an example of a table with 5000 rows
         );
       };
       return (
-        <div style={{ display: "flex", overflowX: "scroll", height: 250, flex: 1 }}>
-          <Table
-            errorState={<TableErrorState />}
-            emptyState={<TableEmptyState />}
-            columns={scrollTableColumns}
-            className="monday-storybook-table_full-width"
-          >
-            <TableHeader>
-              {scrollTableColumns.map((cell, index) => (
-                <TableHeaderCell key={index} {...cell} />
-              ))}
-            </TableHeader>
-            <TableVirtualizedBody rowRenderer={Row} items={scrollTableData} />
-          </Table>
-        </div>
+        <Table
+          errorState={<TableErrorState />}
+          emptyState={<TableEmptyState />}
+          columns={virtualizedScrollTableColumns}
+          style={{ height: 250 }}
+        >
+          <TableHeader>
+            {virtualizedScrollTableColumns.map((cell, index) => (
+              <TableHeaderCell key={index} {...cell} />
+            ))}
+          </TableHeader>
+          <TableVirtualizedBody rowRenderer={Row} items={virtualizedScrollTableData} />
+        </Table>
       );
     }}
   </Story>
 </Canvas>
+
+## Do’s and Don’ts
+
+<ComponentRules
+  rules={[
+    {
+      positive: {
+        component: (
+          <div style={{ width: "95%" }}>
+            <Table
+              errorState={<TableErrorState />}
+              emptyState={<TableEmptyState />}
+              columns={doAndDontIconsRuleColumns}
+            >
+              <TableHeader>
+                {doAndDontIconsRuleColumns.map(cell => (
+                  <TableHeaderCell key={cell.id} {...cell} />
+                ))}
+              </TableHeader>
+              <TableBody>
+                {doAndDontIconsRuleData.map(rowItem => (
+                  <TableRow key={rowItem.id}>
+                    <TableCell>{rowItem.sentOn}</TableCell>
+                    <TableCell>{rowItem.subject}</TableCell>
+                    <TableCell>
+                      <Label
+                        text={rowItem.status}
+                        color={statusColumnToLabelColor[rowItem.status]}
+                        isAnimationDisabled
+                      />
+                    </TableCell>
+                  </TableRow>
+                ))}
+              </TableBody>
+            </Table>
+          </div>
+        ),
+        description: "If there’s a need to insert an icon, use for all columns."
+      },
+      negative: {
+        component: (
+          <div style={{ width: "95%" }}>
+            <Table
+              errorState={<TableErrorState />}
+              emptyState={<TableEmptyState />}
+              columns={doAndDontIconsRuleColumns}
+            >
+              <TableHeader>
+                {doAndDontIconsRuleColumns.map(cell => (
+                  <TableHeaderCell key={cell.id} {...cell} icon={cell.id === "subject" ? cell.icon : undefined} />
+                ))}
+              </TableHeader>
+              <TableBody>
+                {doAndDontIconsRuleData.map(rowItem => (
+                  <TableRow key={rowItem.id}>
+                    <TableCell>{rowItem.sentOn}</TableCell>
+                    <TableCell>{rowItem.subject}</TableCell>
+                    <TableCell>
+                      <Label
+                        text={rowItem.status}
+                        color={statusColumnToLabelColor[rowItem.status]}
+                        isAnimationDisabled
+                      />
+                    </TableCell>
+                  </TableRow>
+                ))}
+              </TableBody>
+            </Table>
+          </div>
+        ),
+        description: "Don't use icons if not applied to all columns titles."
+      }
+    }
+  ]}
+/>
 
 ## Related components
 
