--- a/src/components/Tipseen/__stories__/tipseen.stories.mdx
+++ b/src/components/Tipseen/__stories__/tipseen.stories.mdx
@@ -183,6 +183,34 @@ Use when the tip is too long or when you want to teach something in steps.
   </Story>
 </Canvas>
 
+### Tipseen with custom media
+
+Wrap your custom media with `TipseenMedia` component. This use case is good for when using Lottie animations or other media that is not necessarily an image.
+
+<Canvas>
+  <Story name="Tipseen with custom media">
+    <Tipseen
+      // The modifier's purpose is to prevent the tipseen from being displayed when the user scrolls the story upwards / downwards.
+      // Therefore, there is no need to move this prop in your implementations.
+      position={Tipseen.positions.RIGHT}
+      modifiers={modifiers}
+      closeButtonTheme={Tipseen.closeButtonThemes.DARK}
+      content={
+        <>
+          <TipseenMedia>
+            <img src={picture} style={{ objectFit: "cover", width: "100%", height: 175 }} />
+          </TipseenMedia>
+          <TipseenContent title="This is a Floating Tipseen">
+            Popover message will appear here lorem ipsum dolor samet…
+          </TipseenContent>
+        </>
+      }
+    >
+      <div className="monday-storybook-tipseen_big-container" />
+    </Tipseen>
+  </Story>
+</Canvas>
+
 ### Floating Tipseen
 
 Use Floating Tipseen in case where the guidance is not relevant to a specific UI element, but general.
