--- a/src/components/Label/__stories__/label.stories.mdx
+++ b/src/components/Label/__stories__/label.stories.mdx
@@ -80,12 +80,10 @@ A label indicates the status of an item.
 By applying the onClick prop, the label will become clickable and get all the relevant states (hover, focus, ...) and keyboard support
 <Canvas>
   <Story name="Clickable">
-    <div className="monday-storybook-label_group">
-      <div className="monday-storybook-label_inline-block">
-        <Label text="New" kind={Label.kinds.LINE} onClick={NOOP} />
-        <Label text="Beta" onClick={NOOP} />
-      </div>
-    </div>
+    <div className="monday-storybook-label_group"><Label text="New" onClick={NOOP} /><Label text="New" kind={Label.kinds.LINE} onClick={NOOP} /></div>
+    <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.NEGATIVE} onClick={NOOP} /><Label text="New" color={Label.colors.NEGATIVE} kind={Label.kinds.LINE} onClick={NOOP} /></div>
+    <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.POSITIVE} onClick={NOOP} /><Label text="New" color={Label.colors.POSITIVE} kind={Label.kinds.LINE} onClick={NOOP} /></div>
+    <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.DARK} onClick={NOOP} /><Label text="New" color={Label.colors.DARK} kind={Label.kinds.LINE} onClick={NOOP} /></div>
   </Story>
 </Canvas>
 
