--- a/src/components/Label/__stories__/label.stories.mdx
+++ b/src/components/Label/__stories__/label.stories.mdx
@@ -60,7 +60,7 @@ A label indicates the status of an item.
 ## Variants
 ### States
 <Canvas>
-  <Story name="States">
+  <Story name="States" parameters={{ chromatic: { pauseAnimationAtEnd: true }}}>
     <div className="monday-storybook-label_group monday-storybook-label_states-gap"><Label text="New" />Fill</div>
     <div className="monday-storybook-label_group monday-storybook-label_states-gap"><Label text="New" kind={Label.kinds.LINE} />Outline</div>
   </Story>
@@ -68,7 +68,7 @@ A label indicates the status of an item.
 
 ### Colors
 <Canvas>
-  <Story name="Colors">
+  <Story name="Colors" parameters={{ chromatic: { pauseAnimationAtEnd: true }}}>
     <div className="monday-storybook-label_group"><Label text="New" /><Label text="New" kind={Label.kinds.LINE} /></div>
     <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.NEGATIVE} /><Label text="New" color={Label.colors.NEGATIVE} kind={Label.kinds.LINE} /></div>
     <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.POSITIVE} /><Label text="New" color={Label.colors.POSITIVE} kind={Label.kinds.LINE} /></div>
@@ -79,7 +79,7 @@ A label indicates the status of an item.
 ### Clickable
 By applying the onClick prop, the label will become clickable and get all the relevant states (hover, focus, ...) and keyboard support
 <Canvas>
-  <Story name="Clickable">
+  <Story name="Clickable" parameters={{ chromatic: { pauseAnimationAtEnd: true }}}>
     <div className="monday-storybook-label_group"><Label text="New" onClick={NOOP} /><Label text="New" kind={Label.kinds.LINE} onClick={NOOP} /></div>
     <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.NEGATIVE} onClick={NOOP} /><Label text="New" color={Label.colors.NEGATIVE} kind={Label.kinds.LINE} onClick={NOOP} /></div>
     <div className="monday-storybook-label_group"><Label text="New" color={Label.colors.POSITIVE} onClick={NOOP} /><Label text="New" color={Label.colors.POSITIVE} kind={Label.kinds.LINE} onClick={NOOP} /></div>
@@ -134,7 +134,7 @@ By applying the onClick prop, the label will become clickable and get all the re
 ### Secondary label 
 In case of visual overload, use the secondary label in order to create hirarchy.
 <Canvas>
-  <Story name="Secondary label">
+  <Story name="Secondary label" parameters={{ chromatic: { pauseAnimationAtEnd: true }}}>
     <MultipleStoryElementsWrapper className="monday-storybook-label_column-block">
       <div className="monday-storybook-label_article">
         <h5 className="monday-storybook-label_title">Gannt</h5>
