docs: rename title

--- a/src/components/Label/__stories__/label.stories.mdx
+++ b/src/components/Label/__stories__/label.stories.mdx
@@ -58,7 +58,7 @@ A label indicates the status of an item.
 </Tip>
 
 ## Variants
-### States
+### Kinds
 <Canvas>
   <Story name="States" parameters={{ chromatic: { pauseAnimationAtEnd: true }}}>
     <div className="monday-storybook-label_group monday-storybook-label_states-gap"><Label text="New" />Fill</div>
