--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -3,6 +3,7 @@ import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import {
   ThemeProviderFoldedThemingTemplate,
+  ThemeProviderProductThemingTemplate,
   ThemeProviderTemplateOverview,
   ThemeProviderThemingScopeTemplate
 } from "./ThemeProvider.stories";
@@ -90,4 +91,10 @@ Please write here the component description
 
 <Canvas>
   <Story name="Folded theming">{ThemeProviderFoldedThemingTemplate.bind({})}</Story>
+</Canvas>
+
+### Product theming
+
+<Canvas>
+  <Story name="Product theming">{ThemeProviderProductThemingTemplate.bind({})}</Story>
 </Canvas>
