ThemeProvider story - AlphaWarning

--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -25,6 +25,8 @@ export const metaSettings = createStoryMetaSettingsDecorator({
 
 # ThemeProvider
 
+<AlphaWarning />
+
 - [Overview](#overview)
 - [Props](#props)
 - [Usage](#usage)
