ThemeProvider story overview description

--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -38,7 +38,9 @@ export const metaSettings = createStoryMetaSettingsDecorator({
 
 ## Overview
 
-Please write here the component description
+This component helps to customize the colors of library's components by overriding a specific css variables with a values provided within theme object.
+There are 2 levels of theming: **system theme** and **product theme**. System theme is a one of a 4 predefined themes: <code>light</code>, <code>dark</code>, <code>black</code> and <code>hacker</code>.
+Product theme is a custom theme that can be provided by a user, there you can specify the values of specific color tokens for each of the system themes.
 
 <Canvas>
   <Story
